--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js" charset="utf-8"></script>
+    <script type="text/javascript">
+    $('#enemies-container .characters').on("click", function() {
+      alert($(this).attr("data-char"));
+    });
+    </script>
   </body>
 </html>
