Created logic for removing enemy from arena and adding a new enemy

--- a/index.html
+++ b/index.html
@@ -16,27 +16,14 @@
       </div>
     </header>
 
-    <div id="main-container"class="container">
-
-    </div>
-
     <div class="container label-container">
-      <h2>Characters</h2>
-    </div>
-
-
-    <div id="enemies-container"class="container">
-    </div>
-
-    <div class="container label-container">
-       <h2>Enemies</h2>
-    </div>
-
-    <div class="container" id="arena">
-    </div>
-
-    <div class="container label-container">
-       <h2>Arena</h2>
+      <div id="main-container"></div>
+      <h2>Your Character</h2>
+      <div id="enemies-container"></div>
+      <h2>Enemies</h2>
+      <button id="attack"class="btb btn-danger btn-lg">ATTACK!</button>
+      <div id="arena"></div>
+      <h2>Arena</h2>
     </div
     <div class="container"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
