Upgraded Visuals and added some animation features

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <body>
     <header>
       <div class="container">
-        <h5>Star Wars RPG</h5>
+        <h1><strong>Star Wars RPG</strong></h1>
       </div>
     </header>
 
-    <div class="container label-container">
+    <div class="container label-container text-center">
       <div id="main-container"></div>
-      <h2>Your Character</h2>
+      <h2 class="shadow text-center">Your Character</h2>
       <div id="enemies-container"></div>
-      <h2>Enemies</h2>
+      <h2 class="shadow text-center">Enemies</h2>
       <button id="attack"class="btb btn-danger btn-lg">ATTACK!</button>
       <div id="arena"></div>
-      <h2>Arena</h2>
+      <h2 class="shadow text-center">Arena</h2>
     </div
     <div class="container"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
