Added Modals for popups instead of alerts

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
       <h2 class="shadow text-center">Arena</h2>
     </div
     <div class="container"></div>
+
+
+    <!-- Modal  -->
+    <div class="modal fade" id="modal" role="dialog">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2 class="modal-title">Chosen Player</h2>
+          </div>
+          <div id="modalBody"class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
