Added final features

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2 class="shadow text-center">Enemies</h2>
       <button id="attack"class="btb btn-danger btn-lg">ATTACK!</button>
       <div id="arena"></div>
-      <h2 class="shadow text-center">Arena</h2>
+      <h2 id="arenaFooter"class="shadow text-center">Arena</h2>
     </div
     <div class="container"></div>
 
@@ -50,7 +50,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js" charset="utf-8"></script>
-    
+
     </script>
   </body>
 </html>
